--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.2
   google_fonts: ^6.1.0
   flutter_spinkit: ^5.2.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
